fix dark mode background color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,7 @@ $material-icons-font-path: '';
     $error: #DB3229
   );
 
+  --color-background: #0e0e0e;
   --color-outline: #555;
 }
 
